# cc-guardian

./: .gitignore  Cargo.toml  README.md  README.zh.md
.github/workflows/: ci.yml  release.yml
locales/: en.yml  zh.yml
src/: error.rs  git_ops.rs  i18n.rs  lib.rs  main.rs
src/commands/: create.rs  diff.rs  init.rs  list.rs  mod.rs  restore.rs  show.rs  traits.rs
src/git_ops/: branch.rs  commit.rs  diff.rs  repository.rs  types.rs
src/services/: checkpoint_service.rs  mod.rs
