[package]
name = "ccg"
version = "0.0.3"
edition = "2024"
description = "Claude Code Checkpoint Guardian - A Git-based checkpoint management tool for AI-assisted development"

[profile.release]
opt-level = 3     # 0-3, 's', 'z'
lto = true        # 链接时优化
codegen-units = 1 # 减少并行编译但提升优化效果
panic = "abort"   # 在 panic 时直接终止
strip = true      # 剥离符号信息


[dependencies]
git2 = { version = "0.18.3", default-features = false }
clap = { version = "4.4", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
console = "0.15"
dialoguer = "0.11"
rust-i18n = "2.2.2"
lazy_static = "1.4.0"

[dev-dependencies]
tempfile = "3.8"
